2011-05-25  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/hub_ctrl.py: New.  Port of original C implementation.

2011-05-16  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Call flash_unlock at the beginning.
	(device_initialize_once): Don't call flash_unlock here.
	* src/flash.c (flash_init): Likewise.

	* src/openpgp.c (cmd_select_file): Don't use write_res_apdu.
	(set_res_apdu): Rename from write_res_apdu.  Just SW1 and SW2.

2011-05-13  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.12.

2011-05-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pso, cmd_internal_authenticate)
	(cmd_update_binary, cmd_write_binary): Don't check pw locked.

	* tool/dfuse.py (DFU_STM32.verify): Add missing colon.
	* tool/dfuse.py (get_device): Restrict to STMicro DfuSe.

	* tool/gnuk_put_binary.py (main): Add -p option to enter password.

	* src/ac.c (verify_user_0): New.
	(verify_pso_cds, verify_admin_0): Use verify_user_0.
	* src/openpgp.c (cmd_change_password): Use verify_user_0.

	* src/random.c (get_salt): Rename from get_random.
	(random_bytes_get, random_bytes_free): It's 16-byte.

	* src/ac.c (verify_admin_0): Use PW_ERR_PW1 counter when
	authenticated by PW1.

2011-05-11  NIIBE Yutaka  <gniibe@fsij.org>

	* src/ac.c (verify_pso_cds, verify_other): Fail (with no counter
	update) if key is not registered yet.
	(verify_admin_0): Compare to OPENPGP_CARD_INITIAL_PW3 when empty
	PW3 and non-empty PW1 but signing key is not registered yet.

	* tool/gnuk_put_binary.py: New implementation by pyscard.

	* src/main.c (device_initialize_once): New.
	* src/usb_prop.c (gnukStringSerial): Move to...
	* src/usb_desc.c (gnukStringSerial): here.  Bump version to 0.12.
	Fill by 0xff.
	* src/usb_prop.c (gnuk_device_init)
	(gnuk_device_GetStringDescriptor): Don't use RAM for
	gnukStringSerial, use ROM like other string descriptor.
	* src/usb_desc.c (String_Descriptor): Add gnukStringSerial.

	* src/openpgp-do.c (gpg_get_pw1_lifetime): Make static.